--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,12 +4,12 @@ plugins {
 
 android {
     namespace 'app.exploitr.seamless'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "app.exploitr.seamless"
         minSdk 22
-        targetSdk 33
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
@@ -39,4 +39,10 @@ dependencies {
     testImplementation libs.junit
     androidTestImplementation libs.androidx.test.ext.junit
     androidTestImplementation libs.espresso.core
+    implementation libs.androidx.work.runtime
+    implementation libs.androidx.concurrent.futures
+    implementation libs.picasso
+    implementation libs.retrofit
+    implementation libs.converter.gson
+    implementation libs.lottie
 }
